# space-junk

./: .gitignore  README.md  index.html  main.go  main.wasm  package-lock.json  package.json  tsconfig.json  vite.config.ts
crate/: Cargo.toml
crate/src/: lib.rs
public/: debris.webm  manifest.json  russianDebris.webm
public/lottie/: digData.json
src/: App.css  App.js  App.scss  App.tsx  index.scss  index.tsx  main.ts
src/3DElements/: Engine.js  Engine.ts
src/components/: FastFilter.component.tsx  FastFilter.js  Info.component.tsx  Info.js  Info.tsx  Preview.tsx  Search.component.tsx  Search.js  Search.tsx  SearchResults.tsx  SelectedStations.component.tsx  SelectedStations.js  SelectedStations.tsx
src/components/CameraDistanceSlider/: CameraDistanceSlider.component.tsx  CameraDistanceSlider.module.scss
src/components/DigDataButton/: DigDataButton.component.tsx  DigDataButton.module.scss
src/components/InterfaceButton/: InterfaceButton.component.tsx  InterfaceButton.module.scss
src/components/OnlySelected/: OnlySelected.component.tsx  OnlySelected.module.scss
src/components/OrbitSelector/: OrbitSelector.component.tsx  OrbitSelector.module.scss
src/config/: satellites.config.ts
src/layouts/: Earth.js  Earth.layout.tsx  Earth.tsx
src/models/: constants.d.ts  declare.d.ts  satellites.ts
src/services/: CorsFreeUrl.service.ts  satellites.service.ts
src/types/: global.d.ts  models.ts
src/utils/: Sizes.ts  Time.ts  delta.ts  initGo.ts  parseTle.tsx
src/webgl/: Camera.ts  Experience.ts  Renderer.ts
src/workers/: calculSatellitesPositions.ts
(+44 files in other folders)
