[package]
name = "crate"
version = "0.1.0"
authors = ["Antoine Tardivel <tardivelantoine@gmail.com>"]
edition = "2018"
description = "calcul satellites positions"
repository = "https://github.com/antoinetardivel/space-junk"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
cfg-if = "1.0.0"
sgp4 = "0.5.0"

console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
opt-level = "s"

[features]
default = ["console_error_panic_hook", "wee_alloc"]



